{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 75,
  "lineage": "74f9499e-7771-7871-5fcf-10418a8edab6",
  "resources": [
    {
      "module": "module.Webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webserver",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:732837927423:instance/i-00792dfabe27a0951",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00792dfabe27a0951",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Webserver_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03bb6033c5c5ba696",
            "private_dns": "ip-10-0-1-54.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-65-2-11-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.11.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0821b8b1dd570931b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d45f2f58a8e056b",
            "tags": {
              "Name": "Webserver_Host"
            },
            "tags_all": {
              "Name": "Webserver_Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007a9b879209c62db"
            ]
          },
          "dependencies": [
            "module.Webserver.aws_security_group.Webserver_sg",
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_route_table.second_rt",
            "module.VPC.aws_route_table_association.private_subnet_asso",
            "module.VPC.aws_route_table_association.public_subnet_asso",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Webserver_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:security-group/sg-007a9b879209c62db",
            "description": "Security group for Webserver host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007a9b879209c62db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Webserver_sg",
            "name_prefix": "",
            "owner_id": "732837927423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver-security-group"
            },
            "tags_all": {
              "Name": "Webserver-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_route_table.second_rt",
            "module.VPC.aws_route_table_association.private_subnet_asso",
            "module.VPC.aws_route_table_association.public_subnet_asso",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.EKS",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodegroup_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:security-group/sg-0439bbe170e2c2c9c",
            "description": "security group for EKS managed node group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0439bbe170e2c2c9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-007a9b879209c62db"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Fintrust-Prod-eks-node-group-sg",
            "name_prefix": "",
            "owner_id": "732837927423",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Webserver.aws_instance.Webserver",
            "module.Webserver.aws_key_pair.Webserver_key_pair",
            "module.Webserver.aws_security_group.Webserver_sg",
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_route_table.second_rt",
            "module.VPC.aws_route_table_association.private_subnet_asso",
            "module.VPC.aws_route_table_association.public_subnet_asso",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d26c17d9206300c",
            "domain": "vpc",
            "id": "eipalloc-02d26c17d9206300c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-190-169.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.190.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat-GW-eip"
            },
            "tags_all": {
              "Name": "Nat-GW-eip"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:internet-gateway/igw-07e4f68f00fbfae2b",
            "id": "igw-07e4f68f00fbfae2b",
            "owner_id": "732837927423",
            "tags": {
              "Name": "Fintrust-Prod-VPC-IGW"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-IGW"
            },
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d26c17d9206300c",
            "association_id": "eipassoc-044803f8d9a04c6ac",
            "connectivity_type": "public",
            "id": "nat-00314d22ad6bac76a",
            "network_interface_id": "eni-0bef562a6a378aabd",
            "private_ip": "10.0.2.203",
            "public_ip": "13.127.190.169",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c84fb7d90c3a68b5",
            "tags": {
              "Name": "Fintrust-Prod-VPC-NGW"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-NGW"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:route-table/rtb-028250d85f09d8ecc",
            "id": "rtb-028250d85f09d8ecc",
            "owner_id": "732837927423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00314d22ad6bac76a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Fintrust-Prod-VPC-Private-RT"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "second_rt",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:route-table/rtb-06c2c73550facb85b",
            "id": "rtb-06c2c73550facb85b",
            "owner_id": "732837927423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e4f68f00fbfae2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Fintrust-Prod-VPC-Public-RT"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06382c5e8a5340381",
            "route_table_id": "rtb-028250d85f09d8ecc",
            "subnet_id": "subnet-079fca9dcbb6de9ff"
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025335c4a9b83c3a2",
            "route_table_id": "rtb-028250d85f09d8ecc",
            "subnet_id": "subnet-01ee4d78e74169ed4"
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_nat_gateway.ngw",
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_subnet.private_subs",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c28216b80d594ff2",
            "route_table_id": "rtb-06c2c73550facb85b",
            "subnet_id": "subnet-02d45f2f58a8e056b"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_route_table.second_rt",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137cffac827f6f37",
            "route_table_id": "rtb-06c2c73550facb85b",
            "subnet_id": "subnet-0c84fb7d90c3a68b5"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.gw",
            "module.VPC.aws_route_table.second_rt",
            "module.VPC.aws_subnet.public_subs",
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subs",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-079fca9dcbb6de9ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079fca9dcbb6de9ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-1",
              "env": "Private"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-1",
              "env": "Private"
            },
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-01ee4d78e74169ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ee4d78e74169ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-2",
              "env": "Private"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-2",
              "env": "Private"
            },
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subs",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-02d45f2f58a8e056b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d45f2f58a8e056b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-1",
              "env": "Public"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-1",
              "env": "Public"
            },
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-0c84fb7d90c3a68b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c84fb7d90c3a68b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-2",
              "env": "Public"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-2",
              "env": "Public"
            },
            "vpc_id": "vpc-07dce06df5b268359"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:vpc/vpc-07dce06df5b268359",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c45f9efb1cb77508",
            "default_route_table_id": "rtb-0118d4ec87212a532",
            "default_security_group_id": "sg-0a09d63e7c4faa674",
            "dhcp_options_id": "dopt-0b58b62d1a4b56f20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07dce06df5b268359",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0118d4ec87212a532",
            "owner_id": "732837927423",
            "tags": {
              "Name": "Fintrust-Prod-VPC"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}